static url modified

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="block_body">
             <div class="card card1">
                 <div class="section header">
-                    <img src="./Images/modular.png" alt="">
+                    <img src="Images/modular.png" alt="">
                     <p>MODULAR</p>
                 </div>
                 <div class="section details">
@@ -99,7 +99,7 @@
             </div>
             <div class="card card2">
                 <div class="section header">
-                    <img src="./Images/furniture.png" alt="">
+                    <img src="Images/furniture.png" alt="">
                     <p>FURNITURE</p>
                 </div>
                 <div class="section details">
@@ -175,7 +175,7 @@
             </div>
             <div class="card card3">
                 <div class="section header">
-                    <img src="./Images/furnish-decor.png" alt="">
+                    <img src="Images/furnish-decor.png" alt="">
                     <p>FURNISHING & DECOR</p>
                 </div>
                 <div class="section details">
@@ -242,7 +242,7 @@
             </div>
             <div class="card card4">
                 <div class="section header">
-                    <img src="./Images/home-improvements.png" alt="">
+                    <img src="Images/home-improvements.png" alt="">
                     <p>HOME IMPROVEMENT SERVICES</p>
                 </div>
                 <div class="section details">
@@ -288,7 +288,7 @@
             <div class="slide">
                 <div class="slideCard slideCard_1">
                     <div class="img">
-                        <img src="./Images/diningRoom.jpg" alt="">
+                        <img src="Images/diningRoom.jpg" alt="">
                     </div>
                     <div class="content">
                         <h1>Personalized dining rooms</h1>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="slideCard slideCard_2">
                     <div class="img">
-                        <img src="./Images/wardrobes.png" alt="">
+                        <img src="Images/wardrobes.png" alt="">
                     </div>
                     <div class="content">
                         <h1>Personalized modular wardrobes</h1>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="slideCard slideCard_3">
                     <div class="img">
-                        <img src="./Images/kitchen.jpg" alt="">
+                        <img src="Images/kitchen.jpg" alt="">
                     </div>
                     <div class="content">
                         <h1>Personalized modular kitchens</h1>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="slideCard slideCard_3">
                     <div class="img">
-                        <img src="./Images/badroom.jpg" alt="">
+                        <img src="Images/badroom.jpg" alt="">
                     </div>
                     <div class="content">
                         <h1>Personalized Bedrooms</h1>
@@ -355,7 +355,7 @@
         <div class="customersContainer">
             <div class="card">
                 <div class="img">
-                    <img src="./Images/clint1.jpg" alt="" width="150px" height="150px">
+                    <img src="Images/clint1.jpg" alt="" width="150px" height="150px">
                 </div>
                 <div class="content">
                     <blockquote>“We have very busy schedules and didn’t have time to spare but the entire Livspace team
@@ -365,7 +365,7 @@
             </div>
             <div class="card">
                 <div class="img">
-                    <img src="./Images/clint2.jpg" alt="" width="150px" height="150px">
+                    <img src="Images/clint2.jpg" alt="" width="150px" height="150px">
                 </div>
                 <div class="content">
                     <blockquote>“Our dream kitchen is exactly what we wanted.”</blockquote>
@@ -374,7 +374,7 @@
             </div>
             <div class="card">
                 <div class="img">
-                    <img src="./Images/clint3.jpg" alt="" width="150px" height="150px">
+                    <img src="Images/clint3.jpg" alt="" width="150px" height="150px">
                 </div>
                 <div class="content">
                     <blockquote>“We’d visualised a minimalist concept like this and Livspace successfully delivered it.”
