static url modified

--- a/index.html
+++ b/index.html
@@ -423,15 +423,15 @@
         <h1>Follow us</h1>
         <div>
             <a href="https://www.facebook.com/lalit.nath.16752754/">
-                <img src="../Images/icons/facebook.svg" alt="facebook"></a>
+                <img src="./Images/Icons/facebook.svg" alt="facebook"></a>
             <a href="https://www.instagram.com/lalitnath.uk1220/">
-                <img src="../Images/icons/instagram.svg" alt="instagram">
+                <img src="./Images/Icons/instagram.svg" alt="instagram">
             </a>
             <a href="https://www.linkedin.com/in/lalit-nath-a95906203">
-                <img src="../Images/icons/linkedin.svg" alt="linkedin">
+                <img src="./Images/Icons/linkedin.svg" alt="linkedin">
             </a>
             <a href="https://github.com/LalitNath1221">
-                <img src="../Images/icons/github.svg" alt="github">
+                <img src="./Images/Icons/github.svg" alt="github">
             </a>
         </div>
         <h3>Developer : follow to contact</h3>
